--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -34,7 +34,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="p-5">
+				<div class="px-5 pb-5 pt-3">
+					<div class="text-xs font-light text-gray-400">
+						Atualizado há <%= time_ago_in_words @event&.updated_at %>
+					</div>
 					<h1 class="font-bold font-display text-2xl text-gray-900">
 						<%= @event.details_name %>
 					</h1>
@@ -79,7 +82,9 @@
 						<div class="text-sm"><%= helpers.format_hour @event.start_time %></div>
 					</div>
 					<div class="my-auto text-sm font-semibold text-gray-800">
-						O evento acontecerá <%= I18n.l(@event.day_of_week['date'], format: :week) %> dia <%= I18n.l(@event.day_of_week['date'], format: :long) %> às <%= helpers.format_hour @event.start_time %>, daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>.
+						O evento acontecerá <%= I18n.l(@event.day_of_week['date'], format: :week) %>
+						dia <%= I18n.l(@event.day_of_week['date'], format: :long) %> às <%= helpers.format_hour @event.start_time %>
+						, daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>.
 					</div>
 				</div>
 				<div class="px-5 py-5 border-b border-gray-100">
@@ -105,6 +110,24 @@
 						<%= @event.details_description.html_safe %>
 					</div>
 				</div>
+				<% if @event&.organizers.present? %>
+					<div class="mt-6 mb-5 px-5">
+						<h2 class="font-bold text-gray-800 font-display uppercase">Organizadores</h2>
+						<div class="space-y-2 mt-2">
+							<% @event.organizers.each do |organizer| %>
+								<%= link_to organizer_path(organizer), class: 'flex font-semibold items-center space-x-3' do %>
+									<%= image_tag organizer.image[:sm].try { |image| image.url(public: true) },
+																loading: :lazy,
+																class:   'w-6 h-6 rounded-full shadow-sm',
+																onerror: "this.style.opacity='0'" rescue nil %>
+									<div class="text-sm">
+										<%= organizer.details_name %>
+									</div>
+								<% end %>
+							<% end %>
+						</div>
+					</div>
+				<% end %>
 				<% if @similar_events.present? %>
 					<div class="mt-10 mb-5">
 						<h2 class="px-5 font-bold text-gray-800 font-display uppercase">Similares</h2>
@@ -122,7 +145,7 @@
 										<%= similar_event.details_name %>
 									<% end %>
 									<div class="text-sm md:text-xs text-gray-500">
-										<%= helpers.day_of_week(@event.start_time).titlecase %> · <%= helpers.format_hour @event.start_time %>h · <%= link_to helpers.limit_place_name_size(similar_event.place_details_name, 24), place_path(similar_event.place), class: 'md:hover:underline capitalize' %>
+										<%= link_to helpers.limit_place_name_size(similar_event.place_details_name, 24), place_path(similar_event.place), class: 'md:hover:underline capitalize' %>
 									</div>
 								</div>
 								<div>
@@ -132,10 +155,9 @@
 																	action:     'click->main-sidebar--horizontal-event#openEvent',
 																	'event-id': similar_event.id
 																} do %>
-											<div class="bg-gray-50 aspect-ratio-16/9"></div>
 											<%= image_tag helpers.shrine_image_url(similar_event, :feed), {
 												loading: :lazy,
-												class:   'absolute cursor-pointer h-full left-0 object-center object-cover top-0 w-full overflow-hidden',
+												class:   'cursor-pointer w-full object-center object-cover overflow-hidden',
 												onerror: "this.style.opacity='0'"
 											} rescue nil %>
 										<% end %>
