--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -97,9 +97,6 @@
     "validFrom": "<%= @event.ld_json.valid_from %>"
   }
 }
-
-
-
 </script>
 
 <%= render Modal::SignInComponent.new(text: nil) %>
@@ -123,7 +120,7 @@
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
 	<div class="md:col-span-4 mb-10 md:mb-0 mt-5 md:mt-0">
-		<% if already_happened? @event %>
+		<% if will_happen? @event %>
 			<div class="bg-gray-200 cursor-pointer flex font-bold hidden items-center md:block bottom-auto mb-5 relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
 				<a href="<%= @event.details_source_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 					<div>Abrir no facebook</div>
@@ -154,6 +151,21 @@
 				</div>
 			</div>
 		<% end %>
+
+		<div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100 mb-8 p-5 space-y-3">
+			<h2 class="font-bold font-display text-xl text-gray-800 uppercase">Organizadores</h2>
+			<% @event.organizers.each do |organizer| %>
+				<%= link_to organizer_path(organizer), class: 'flex font-semibold items-center space-x-3' do %>
+					<%= image_tag organizer.image[:sm].try { |image| image.url(public: true) },
+												loading: :lazy,
+												class:   'w-8 h-8 rounded-full shadow-sm',
+												onerror: "this.style.opacity='0'" rescue nil %>
+					<div>
+						<%= organizer.details_name %>
+					</div>
+				<% end %>
+			<% end %>
+		</div>
 
 		<div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100">
 			<h2 class="px-5 font-bold font-display text-xl text-gray-800 uppercase">Similares</h2>
