Add past events to organizers

--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -110,7 +110,7 @@
 			</svg>
 		</div>
 		<div>
-			Este evento já ocorreu dia <%= I18n.l(@event.end_time) %>.
+			Este evento já ocorreu <%= I18n.l(@event.end_time) %>.
 		</div>
 	</div>
 <% end %>
