--- a/web/app/components/follow_button_component.html.erb
+++ b/web/app/components/follow_button_component.html.erb
@@ -1,7 +1,7 @@
 <%= content_tag :div, id: dom_id(@followable, 'follow-button') do %>
-	<div class="<%= helpers.class_names('cursor-pointer duration-100 h-content hover:scale-110 inline-flex items-center pl-1 pr-2 py-1 rounded-full select-none space-x-1 tap-highlight-none text-sm transform transition-transform',
+	<div class="<%= helpers.class_names('cursor-pointer duration-100 h-content hover:scale-110 inline-flex items-center pl-2 pr-3 py-2 rounded-full select-none space-x-1 tap-highlight-none transform transition-transform',
 																			{ 'bg-brand-100 text-brand-500': @user&.follow?(@followable),
-																				'bg-white text-gray-500':    !@user&.follow?(@followable) }) %>"
+																				'bg-gray-100 text-gray-600':    !@user&.follow?(@followable) }) %>"
 			 data-reflex="<%= "click->#{@followable.class.name}#follow" %>"
 			 data-followable-id="<%= @followable.id %>"
 			 id="<%= "follow-button_#{@followable.id}" %>">
