--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 			<% if current_user == @user %>
 				<div class="space-x-1">
 					<%= link_to "Editar perfil", edit_user_path(@user), class: 'bg-white inline-block px-2 py-1 rounded text-gray-600 text-sm' %>
-					<%= link_to "Sair", destroy_user_session_path, class: 'bg-white inline-block px-2 py-1 rounded text-gray-600 text-sm', method: :delete if current_user.admin? %>
+					<%= link_to "Sair", destroy_user_session_path, class: 'bg-white inline-block px-2 py-1 rounded text-gray-600 text-sm', method: :delete %>
 				</div>
 			<% end %>
 			<% if current_user != @user %>
