--- a/web/app/views/pages/privacy.html
+++ b/web/app/views/pages/privacy.html
@@ -1,59 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="utf-8">
-    <meta name="robots" content="noindex">
-    <title>Política de privacidade</title>
+	<meta charset="utf-8">
+	<meta name="robots" content="noindex">
+	<title>Política de privacidade</title>
 </head>
 <body>
-<h2> Política de Privacidade (br)</h2>
-<p> Sua privacidade é importante para nós. A política do Alegreme respeita a sua privacidade em relação a qualquer
-    informação que possamos coletar de você em nosso site, <a href="http://www.alegreme.com">
-        http://www.alegreme.com </a>, e outros sites que possuímos e operamos. </p>
-<p> Pedimos apenas informações pessoais quando realmente precisamos delas para fornecer um serviço para você. Nós
-    coletamos por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que estamos
-    coletando e como será usado. </p>
-<p> Somente retemos as informações coletadas pelo tempo necessário para fornecer o serviço solicitado. Quais dados que
-    armazenamos, protegemos de maneira comercialmente aceitável para evitar perda e roubo, além de acesso não
-    autorizado, divulgação, cópia, uso ou modificação. </p>
-<p> Não compartilhamos informações de identificação pessoal publicamente ou com terceiros, exceto quando exigido por
-    lei. </p>
-<p> Nosso site pode vincular a sites externos que não são operados por nós. Lembre-se de que não temos controle sobre o
-    conteúdo e as práticas desses sites e não podemos aceitar responsabilidade por suas respectivas políticas de
-    privacidade. </p>
-<p> Você é livre para recusar a solicitação de suas informações pessoais, com o entendimento de que talvez não possamos
-    lhe fornecer alguns de seus serviços desejados. </p>
-<p> Dentre alguns dados solicitados de terceiros estão seu nome, email e imagem de perfil da sua conta Google. Usaremos
-    estes dados apenas para login e exibição de seu perfil dentro do site <a href="http://www.alegreme.com">http://www.alegreme.com</a>
-</p>
-<p> O seu uso continuado do nosso site será considerado como aceitação das nossas práticas em relação à privacidade e às
-    informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados de usuários e informações pessoais,
-    não hesite em entrar em contato conosco. </p>
-<p> Esta política entra em vigor em 20 de agosto de 2019. </p>
 
-<h2>Privacy Policy (en)</h2>
-<p>Your privacy is important to us. It is Alegreme's policy to respect your privacy regarding any information we may
-   collect from you across our website, <a href="http://www.alegreme.com">http://www.alegreme.com</a>, and other sites
-   we own and operate.</p>
-<p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and
-   lawful means, with your knowledge and consent. We also let you know why we are collecting it and how it will be
-   used.</p>
-<p>We only retain collected information for as long as necessary to provide you with your requested service. What data
-   we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised
-   access, disclosure, copying, use or modification.</p>
-<p>We dont share any personally identifying information publicly or with third-parties, except when required to by
-   law.</p>
-<p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the
-   content and practices of these sites, and cannot accept responsibility or liability for their respective privacy
-   policies.</p>
-<p>You are free to refuse our request for your personal information, with the understanding that we may be unable to
-   provide you with some of your desired services.</p>
-<p> Some requested data from third parties include your name, email and profile picture from your Google account. We
-    will only use this data to login and display your profile within the <a href="http://www.alegreme.com">
-        http://www.alegreme.com </a></p>
-<p>Your continued use of our website will be regarded as acceptance of our practices around privacy and personal
-   information. If you have any questions about how we handle user data and personal information, feel free to contact
-   us.</p>
-<p>This policy is effective as of 20 August 2019.</p>
+<div class="mx-auto max-w-screen-md p-5 shadow-2xl rounded-2xl mb-10 mt-5">
+	<h2 class="font-display font-bold text-2xl inline-block mb-5"> Política de Privacidade (br)</h2>
+	<div class="space-y-5">
+		<p> Sua privacidade é importante para nós. A política do Alegreme respeita a sua privacidade em relação a
+			qualquer
+			informação que possamos coletar de você em nosso site, <a href="http://www.alegreme.com">
+				http://www.alegreme.com </a>, e outros sites que possuímos e operamos. </p>
+		<p> Pedimos apenas informações pessoais quando realmente precisamos delas para fornecer um serviço para você.
+			Nós
+			coletamos por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que
+			estamos
+			coletando e como será usado. </p>
+		<p> Somente retemos as informações coletadas pelo tempo necessário para fornecer o serviço solicitado. Quais
+			dados
+			que
+			armazenamos, protegemos de maneira comercialmente aceitável para evitar perda e roubo, além de acesso não
+			autorizado, divulgação, cópia, uso ou modificação. </p>
+		<p> Não compartilhamos informações de identificação pessoal publicamente ou com terceiros, exceto quando exigido
+			por
+			lei. </p>
+		<p> Nosso site pode vincular a sites externos que não são operados por nós. Lembre-se de que não temos controle
+			sobre o
+			conteúdo e as práticas desses sites e não podemos aceitar responsabilidade por suas respectivas políticas de
+			privacidade. </p>
+		<p> Você é livre para recusar a solicitação de suas informações pessoais, com o entendimento de que talvez não
+			possamos
+			lhe fornecer alguns de seus serviços desejados. </p>
+		<p> Dentre alguns dados solicitados de terceiros estão seu nome, email e imagem de perfil da sua conta Google.
+			Usaremos
+			estes dados apenas para login e exibição de seu perfil dentro do site <a href="http://www.alegreme.com">http://www.alegreme.com</a>
+		</p>
+		<p> O seu uso continuado do nosso site será considerado como aceitação das nossas práticas em relação à
+			privacidade
+			e às
+			informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados de usuários e informações
+			pessoais,
+			não hesite em entrar em contato conosco. </p>
+		<p> Esta política entra em vigor em 20 de agosto de 2019. </p>
+	</div>
+</div>
 </body>
 </html>
