--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -1,12 +1,10 @@
-<% return unless controller_name == :welcome %>
-
 <section class="antialiased bg-gray-50 flex flex-col font-light md:px-0 md:text-base mt-10 md:mt-5 px-5 py-6 space-y-1 text-center text-gray-600 text-sm w-full <%= "me-footer--#{params[:controller]}" if params[:controller] %>">
 
-	<% if action_name == 'show' %>
-		<a href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-			<img class="mx-auto" style="width: 200px" alt='Disponível no Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>
-		</a>
-	<% end %>
+	<%# if action_name == 'show' %>
+<!--		<a href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>-->
+<!--			<img class="mx-auto" style="width: 200px" alt='Disponível no Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>-->
+<!--		</a>-->
+	<%# end %>
 
 
 	<div class="font-semibold text-brand-600">
@@ -25,8 +23,8 @@
 		Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima.
 	</div> -->
 	<div class="me-footer__links">
-		<a class="manifesto" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="noreferrer" target="_blank">
-			Manifesto ·
+		<a class="manifesto" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow" target="_blank">
+			Sobre ·
 		</a>
 		<a rel="nofollow" href="/privacy">Política de privacidade</a> ·
 		<a rel="nofollow" href="/terms">Termos de serviço</a>
