--- a/web/app/views/pages/terms.html
+++ b/web/app/views/pages/terms.html
@@ -1,134 +1,90 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="utf-8">
-    <meta name="robots" content="noindex">
-    <title>Termos de serviço</title>
+	<meta charset="utf-8">
+	<meta name="robots" content="noindex">
+	<title>Termos de serviço</title>
 </head>
 <body>
-<h2> Termos de Serviço (br) </h2>
-<h3> 1. Termos </h3>
-<p> Ao acessar o site em <a href="http://www.alegreme.com"> http://www.alegreme.com </a>, você concorda em ficar
-    vinculado a estes termos de serviço, todas as leis e regulamentos aplicáveis, e concorda que você é responsável pelo
-    cumprimento de quaisquer leis locais aplicáveis. Se você não concorda com algum destes termos, você está proibido de
-    usar ou acessar este site. Os materiais contidos neste site são protegidos pela lei aplicável de direitos autorais e
-    marcas registradas. </p>
-<h3> 2. Licença de Uso </h3>
-<ol type="a">
-    <li> É concedida permissão para fazer download temporariamente de uma cópia dos materiais (informações ou software)
-         no site da Alegreme apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma
-         licença, não uma transferência de título, e sob esta licença você não pode:
-        <ol type="i">
-            <li> modificar ou copiar os materiais;</li>
-            <li> use os materiais para qualquer finalidade comercial ou para exibição pública (comercial ou não
-                 comercial);
-            </li>
-            <li> tentar descompilar ou fazer engenharia reversa de qualquer software contido no site da Alegreme;</li>
-            <li> remover quaisquer direitos autorais ou outras notações proprietárias dos materiais; ou</li>
-            <li> transfira os materiais para outra pessoa ou "espelhe" os materiais em qualquer outro servidor.</li>
-        </ol>
-    </li>
-    <li> Esta licença será automaticamente rescindida se você violar qualquer uma dessas restrições e pode ser
-         rescindido pela Alegreme a qualquer momento. Ao encerrar sua visualização desses materiais ou após o término
-         desta licença, você deverá destruir todos os materiais baixados que você possua, seja em formato eletrônico ou
-         impresso.
-    </Li>
-</ol>
-<h3> 3. Isenção de responsabilidade </h3>
-<ol type="a">
-    <li> Os materiais no site da Alegreme são fornecidos "como estão". A Alegreme não oferece garantias, expressas ou
-         implícitas, e renuncia e nega todas as outras garantias, incluindo, sem limitação, garantias ou condições
-         implícitas de comerciabilidade, adequação a uma finalidade específica ou não violação de propriedade
-         intelectual ou outra violação de direitos.
-    </li>
-    <li> Além disso, a Alegreme não garante ou faz declarações sobre a precisão, os resultados prováveis ​​ou a
-         confiabilidade do uso dos materiais em seu site ou relacionados a tais materiais ou em sites vinculados a este
-         site.
-    </li>
-</ol>
-<h3> 4. Limitações </h3>
-<p> Em nenhum caso a Alegreme ou seus fornecedores serão responsabilizados por quaisquer danos (incluindo, sem
-    limitação, danos por perda de dados ou lucro, ou devido a interrupção de negócios) decorrentes do uso ou
-    incapacidade de usar os materiais no site da Alegreme. , mesmo que a Alegreme ou um representante autorizado da
-    Alegreme tenha sido notificado oralmente ou por escrito da possibilidade de tal dano. Como algumas jurisdições não
-    permitem limitações sobre garantias implícitas ou limitações de responsabilidade por danos conseqüentes ou
-    incidentais, essas limitações podem não se aplicar a você. </p>
-<h3> 5. Precisão de materiais </h3>
-<p> Os materiais que aparecem no site da Alegreme podem incluir erros técnicos, tipográficos ou fotográficos. A Alegreme
-    não garante que nenhum dos materiais em seu site seja preciso, completo ou atual. A Alegreme pode fazer alterações
-    nos materiais contidos em seu site a qualquer momento, sem aviso prévio. No entanto, a Alegreme não se compromete a
-    atualizar os materiais. </p>
-<h3> 6. Links </h3>
-<p> A Alegreme não reviu todos os sites vinculados ao seu site e não é responsável pelo conteúdo de qualquer site
-    vinculado. A inclusão de qualquer link não implica o endosso da Alegreme do site. O uso de qualquer site vinculado é
-    por conta e risco do usuário. </p>
-<h3> 7. Modificações </h3>
-<p> A Alegreme pode revisar estes termos de serviço para o seu site a qualquer momento, sem aviso prévio. Ao utilizar
-    este site, você concorda em ficar vinculado pela versão atual desses termos de serviço. </p>
-<h3> 8. Legislação Aplicável </h3>
-<p> Estes termos e condições são regidos e interpretados de acordo com as leis de Porto Alegre, Brasil e você
-    irrevogavelmente se submete à jurisdição exclusiva dos tribunais daquele Estado ou localidade. </p>
+<div class="mx-auto max-w-screen-md p-5 shadow-2xl rounded-2xl mb-10 mt-5">
+	<h2 class="font-display font-bold text-2xl inline-block mb-5"> Termos de Serviço (br)</h2>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 1. Termos </h3>
+	<p> Ao acessar o site em <a href="http://www.alegreme.com"> http://www.alegreme.com </a>, você concorda em ficar
+		vinculado a estes termos de serviço, todas as leis e regulamentos aplicáveis, e concorda que você é responsável
+		pelo
+		cumprimento de quaisquer leis locais aplicáveis. Se você não concorda com algum destes termos, você está
+		proibido de
+		usar ou acessar este site. Os materiais contidos neste site são protegidos pela lei aplicável de direitos
+		autorais e
+		marcas registradas. </p>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 2. Licença de Uso </h3>
+	<ol type="a">
+		<li> É concedida permissão para fazer download temporariamente de uma cópia dos materiais (informações ou
+			software)
+			no site da Alegreme apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma
+			licença, não uma transferência de título, e sob esta licença você não pode:
+			<ol type="i">
+				<li> modificar ou copiar os materiais;</li>
+				<li> use os materiais para qualquer finalidade comercial ou para exibição pública (comercial ou não
+					comercial);
+				</li>
+				<li> tentar descompilar ou fazer engenharia reversa de qualquer software contido no site da Alegreme;
+				</li>
+				<li> remover quaisquer direitos autorais ou outras notações proprietárias dos materiais; ou</li>
+				<li> transfira os materiais para outra pessoa ou "espelhe" os materiais em qualquer outro servidor.</li>
+			</ol>
+		</li>
+		<li> Esta licença será automaticamente rescindida se você violar qualquer uma dessas restrições e pode ser
+			rescindido pela Alegreme a qualquer momento. Ao encerrar sua visualização desses materiais ou após o término
+			desta licença, você deverá destruir todos os materiais baixados que você possua, seja em formato eletrônico
+			ou
+			impresso.
+		</Li>
+	</ol>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 3. Isenção de responsabilidade </h3>
+	<ol type="a">
+		<li> Os materiais no site da Alegreme são fornecidos "como estão". A Alegreme não oferece garantias, expressas
+			ou
+			implícitas, e renuncia e nega todas as outras garantias, incluindo, sem limitação, garantias ou condições
+			implícitas de comerciabilidade, adequação a uma finalidade específica ou não violação de propriedade
+			intelectual ou outra violação de direitos.
+		</li>
+		<li> Além disso, a Alegreme não garante ou faz declarações sobre a precisão, os resultados prováveis ​​ou a
+			confiabilidade do uso dos materiais em seu site ou relacionados a tais materiais ou em sites vinculados a
+			este
+			site.
+		</li>
+	</ol>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 4. Limitações </h3>
+	<p> Em nenhum caso a Alegreme ou seus fornecedores serão responsabilizados por quaisquer danos (incluindo, sem
+		limitação, danos por perda de dados ou lucro, ou devido a interrupção de negócios) decorrentes do uso ou
+		incapacidade de usar os materiais no site da Alegreme. , mesmo que a Alegreme ou um representante autorizado da
+		Alegreme tenha sido notificado oralmente ou por escrito da possibilidade de tal dano. Como algumas jurisdições
+		não
+		permitem limitações sobre garantias implícitas ou limitações de responsabilidade por danos conseqüentes ou
+		incidentais, essas limitações podem não se aplicar a você. </p>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 5. Precisão de materiais </h3>
+	<p> Os materiais que aparecem no site da Alegreme podem incluir erros técnicos, tipográficos ou fotográficos. A
+		Alegreme
+		não garante que nenhum dos materiais em seu site seja preciso, completo ou atual. A Alegreme pode fazer
+		alterações
+		nos materiais contidos em seu site a qualquer momento, sem aviso prévio. No entanto, a Alegreme não se
+		compromete a
+		atualizar os materiais. </p>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 6. Links </h3>
+	<p> A Alegreme não reviu todos os sites vinculados ao seu site e não é responsável pelo conteúdo de qualquer site
+		vinculado. A inclusão de qualquer link não implica o endosso da Alegreme do site. O uso de qualquer site
+		vinculado é
+		por conta e risco do usuário. </p>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 7. Modificações </h3>
+	<p> A Alegreme pode revisar estes termos de serviço para o seu site a qualquer momento, sem aviso prévio. Ao
+		utilizar
+		este site, você concorda em ficar vinculado pela versão atual desses termos de serviço. </p>
+	<h3 class="font-semibold text-lg mt-6 mb-3"> 8. Legislação Aplicável </h3>
+	<p> Estes termos e condições são regidos e interpretados de acordo com as leis de Porto Alegre, Brasil e você
+		irrevogavelmente se submete à jurisdição exclusiva dos tribunais daquele Estado ou localidade. </p>
+</div>
 
-<h2>Alegreme Terms of Service (en)</h2>
-<h3>1. Terms</h3>
-<p>By accessing the website at <a href="http://www.alegreme.com">http://www.alegreme.com</a>, you are agreeing to be
-   bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for
-   compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using
-   or accessing this site. The materials contained in this website are protected by applicable copyright and trademark
-   law.</p>
-<h3>2. Use License</h3>
-<ol type="a">
-    <li>Permission is granted to temporarily download one copy of the materials (information or software) on Alegreme's
-        website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of
-        title, and under this license you may not:
-        <ol type="i">
-            <li>modify or copy the materials;</li>
-            <li>use the materials for any commercial purpose, or for any public display (commercial or
-                non-commercial);
-            </li>
-            <li>attempt to decompile or reverse engineer any software contained on Alegreme's website;</li>
-            <li>remove any copyright or other proprietary notations from the materials; or</li>
-            <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
-        </ol>
-    </li>
-    <li>This license shall automatically terminate if you violate any of these restrictions and may be terminated by
-        Alegreme at any time. Upon terminating your viewing of these materials or upon the termination of this license,
-        you must destroy any downloaded materials in your possession whether in electronic or printed format.
-    </li>
-</ol>
-<h3>3. Disclaimer</h3>
-<ol type="a">
-    <li>The materials on Alegreme's website are provided on an 'as is' basis. Alegreme makes no warranties, expressed or
-        implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties
-        or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property
-        or other violation of rights.
-    </li>
-    <li>Further, Alegreme does not warrant or make any representations concerning the accuracy, likely results, or
-        reliability of the use of the materials on its website or otherwise relating to such materials or on any sites
-        linked to this site.
-    </li>
-</ol>
-<h3>4. Limitations</h3>
-<p>In no event shall Alegreme or its suppliers be liable for any damages (including, without limitation, damages for
-   loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on
-   Alegreme's website, even if Alegreme or a Alegreme authorized representative has been notified orally or in writing
-   of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or
-   limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
-<h3>5. Accuracy of materials</h3>
-<p>The materials appearing on Alegreme's website could include technical, typographical, or photographic errors.
-   Alegreme does not warrant that any of the materials on its website are accurate, complete or current. Alegreme may
-   make changes to the materials contained on its website at any time without notice. However Alegreme does not make any
-   commitment to update the materials.</p>
-<h3>6. Links</h3>
-<p>Alegreme has not reviewed all of the sites linked to its website and is not responsible for the contents of any such
-   linked site. The inclusion of any link does not imply endorsement by Alegreme of the site. Use of any such linked
-   website is at the user's own risk.</p>
-<h3>7. Modifications</h3>
-<p>Alegreme may revise these terms of service for its website at any time without notice. By using this website you are
-   agreeing to be bound by the then current version of these terms of service.</p>
-<h3>8. Governing Law</h3>
-<p>These terms and conditions are governed by and construed in accordance with the laws of Porto Alegre, Brasil and you
-   irrevocably submit to the exclusive jurisdiction of the courts in that State or location.</p>
 
 </body>
 </html>
