Adjust style of banner in events#show

--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -102,7 +102,7 @@
 <%= render Modal::SignInComponent.new(text: nil) %>
 
 <% if already_happened? @event %>
-	<div class="mt-5 bg-brand-100 border border-brand-200 flex font-semibold items-center max-w-screen-lg mx-auto p-5 rounded-lg space-x-2 text-brand-600">
+	<div class="bg-brand-100 border border-brand-200 flex font-semibold items-center max-w-screen-lg mb-3 md:mb-0 md:mt-5 md:mx-auto mt-1 mx-4 p-5 rounded-lg space-x-2 text-brand-600">
 		<div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-brand-100 sm:mx-0 sm:h-10 sm:w-10">
 			<!-- Heroicon name: exclamation -->
 			<svg class="h-6 w-6 text-brand-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
