--- a/web/app/views/feeds/category.amp.erb
+++ b/web/app/views/feeds/category.amp.erb
@@ -1,11 +1,10 @@
-<% content_for :meta_title, "Eventos de #{params[:category].capitalize} em Porto Alegre - RS" %>
+<% content_for :meta_title, "Eventos de #{params[:category]&.capitalize} em Porto Alegre - RS" %>
 <% content_for :meta_description, "Descubra eventos de #{params[:category]} que acontecem hoje e outros dias do mês em Porto Alegre - RS" %>
 
 <script type="application/ld+json">
   [
     <%= render partial: 'layouts/json_ld.html.erb', collection: @events, as: :event %>
   ]
-
 </script>
 
 
