--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -11,21 +11,24 @@
 	<% end %>
 	<section id="main-sidebar" class="col-span-12 md:col-span-5">
 		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
-			<div class="select-none tap-highlight-none flex flex-col flex-col-reverse gap-4 items-center mb-12 md:flex md:flex-row md:mx-0 md:pr-0 md:px-5 mx-5 pr-16" style="min-height: 252px;">
-				<div>
-					<h2 class="font-bold font-display text-gray-900 text-2xl md:text-3xl">Aproveite a cidade de Porto Alegre</h2>
-					<span class="inline-block leading-snug mt-2 text-gray-500 text-sm">
-						Aprendemos o que você gosta e não gosta para te sugerir eventos e atividades que vão
-					de lazer a educação. Assim, você descobre coisas novas e não perde o que já conhece.
-					</span>
+			<% unless params[:day] %>
+				<div class="select-none tap-highlight-none flex flex-col flex-col-reverse gap-4 items-center mb-12 md:flex md:flex-row md:mx-0 md:pr-0 md:px-5 mx-5 pr-16" style="min-height: 252px;">
+					<div>
+						<h2 class="font-bold font-display text-gray-900 text-2xl md:text-3xl">Aproveite a cidade de Porto
+							Alegre</h2>
+						<span class="inline-block leading-snug mt-2 text-gray-500 text-sm">
+  						Aprendemos o que você gosta e não gosta para te sugerir eventos e atividades que vão
+  					de lazer a educação. Assim, você descobre coisas novas e não perde o que já conhece.
+  					</span>
+					</div>
+					<%= image_pack_tag ["hero/bebendo.png", "hero/dancando.png", "hero/skate.png", "hero/leitor-e-cao.png", "hero/passeando.png"].sample %>
 				</div>
-				<%= image_pack_tag ["hero/bebendo.png", "hero/dancando.png", "hero/skate.png", "hero/leitor-e-cao.png", "hero/passeando.png"].sample %>
-			</div>
-			<%= render Hero::SwipableComponent.new(user: current_user) %>
+				<%= render Hero::SwipableComponent.new(user: current_user) %>
+			<% end %>
 			<% if @upcoming_events.present? %>
 				<div class="pt-4">
 					<h2 class="font-display text-gray-900 font-bold px-5 text-2xl md:text-3xl">
-						Eventos em Porto Alegre
+						Eventos em Porto Alegre <%= "dia #{I18n.l params[:day].to_date, format: :full}" if params[:day] %>
 					</h2>
 					<div class="flex gap-1 px-5 text-gray-400 text-sm items-center" title="Devido ao Covid19 o número de eventos está abaixo do normal">
 						Atualizado há <%= time_ago_in_words @upcoming_events&.last&.updated_at %>
@@ -35,6 +38,10 @@
 						</svg>
 					</div>
 				</div>
+			<% else %>
+				<h2 class="mt-5 font-display text-gray-900 font-bold px-5 text-2xl md:text-3xl">
+					Não foram encontrados eventos em Porto Alegre <%= "dia #{I18n.l params[:day].to_date, format: :full}" if params[:day] %>
+				</h2>
 			<% end %>
 			<%= render MainSidebar::GroupByDayListComponent.new(events: @upcoming_events, user: current_user, open_in_sidebar: true) %>
 		</div>
