--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -84,9 +84,7 @@
 				</div>
 
 				<div class="my-auto text-sm leading-snug text-gray-600">
-					O evento acontecerá <%= I18n.l(@event.day_of_week['date'], format: :week) %>
-					dia <%= I18n.l(@event.day_of_week['date'], format: :long) %> às <%= helpers.format_hour @event.start_time %>,
-					daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>.
+					O evento acontecerá <%= I18n.l(@event.start_time) %>. Daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>.
 				</div>
 			</div>
 		<% end %>
