--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -28,7 +28,7 @@
 			<% if @upcoming_events.present? %>
 				<div class="pt-4">
 					<h2 class="font-display text-gray-900 font-bold px-5 text-2xl md:text-3xl">
-						Eventos em Porto Alegre <%= "dia #{I18n.l params[:day].to_date, format: :full}" if params[:day] %>
+						Eventos em Porto Alegre <%= I18n.l params[:day].to_date if params[:day] %>
 					</h2>
 					<div class="flex gap-1 px-5 text-gray-400 text-sm items-center" title="Devido ao Covid19 o número de eventos está abaixo do normal">
 						Atualizado há <%= time_ago_in_words @upcoming_events&.last&.updated_at %>
@@ -40,7 +40,7 @@
 				</div>
 			<% else %>
 				<h2 class="mt-5 font-display text-gray-900 font-bold px-5 text-2xl md:text-3xl">
-					Não foram encontrados eventos em Porto Alegre <%= "dia #{I18n.l params[:day].to_date, format: :full}" if params[:day] %>
+					Não foram encontrados eventos em Porto Alegre <%= I18n.l params[:day].to_datefull if params[:day] %>
 				</h2>
 			<% end %>
 			<%= render MainSidebar::GroupByDayListComponent.new(events: @upcoming_events, user: current_user, open_in_sidebar: true) %>
